[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/themes/LineEdit.tres" type="Theme" id=1]
[ext_resource path="res://assets/gui/toggle_button.png" type="Texture" id=2]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/TextEdit.gd" type="Script" id=3]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/TagEdit.gd" type="Script" id=4]
[ext_resource path="res://src/create/shared/warningPopUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/MinecraftRegular-Bmg3.otf" type="DynamicFontData" id=6]
[ext_resource path="res://src/create/shared/IngredientItemTemplate.gd" type="Script" id=7]
[ext_resource path="res://assets/themes/BtnTheme.tres" type="Theme" id=8]
[ext_resource path="res://src/create/SequencedAssembly/signalScripts/16numbEdit.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=24]
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( -1, 0, 33, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 33, 16 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=22]
offsets = PoolRealArray( 0, 0.1, 0.9, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=23]
gradient = SubResource( 22 )
width = 256

[node name="Ingredients" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_constants/separation = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tagModeChanger" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 26.0
custom_constants/separation = 0

[node name="id" type="Label" parent="tagModeChanger"]
margin_right = 64.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 26 )
theme = ExtResource( 8 )
text = "0"
align = 1
valign = 1

[node name="itemLabel" type="Label" parent="tagModeChanger"]
margin_left = 64.0
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
custom_fonts/font = SubResource( 1 )
text = "item"
valign = 1

[node name="modeSwithcer" type="CheckButton" parent="tagModeChanger"]
margin_left = 100.0
margin_right = 145.0
margin_bottom = 26.0
focus_mode = 0
theme = SubResource( 24 )
custom_icons/off = SubResource( 2 )
custom_icons/on = SubResource( 3 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tagLabel" type="Label" parent="tagModeChanger"]
margin_left = 145.0
margin_right = 177.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
custom_fonts/font = SubResource( 1 )
text = "tag"
valign = 1

[node name="idLine" type="HBoxContainer" parent="."]
margin_top = 27.0
margin_right = 1024.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Control" type="Control" parent="idLine"]
margin_right = 64.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 26 )

[node name="identifierLabel" type="Label" parent="idLine"]
margin_left = 64.0
margin_right = 320.0
margin_bottom = 26.0
rect_min_size = Vector2( 256, 26 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = "[MODID]:[IDENTIFIER]"
valign = 1

[node name="identifierKey" type="LineEdit" parent="idLine"]
margin_left = 320.0
margin_right = 670.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 5 )
caret_blink = true
script = ExtResource( 3 )
warnPopUp = ExtResource( 5 )

[node name="colon" type="Label" parent="idLine"]
margin_left = 670.0
margin_right = 674.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = ":"
valign = 1

[node name="identifierValue" type="LineEdit" parent="idLine"]
margin_left = 674.0
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 5 )
caret_blink = true
script = ExtResource( 4 )
warnPopUp = ExtResource( 5 )

[node name="idLine2" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="Control" type="Control" parent="idLine2"]
margin_right = 64.0
margin_bottom = 26.0
rect_min_size = Vector2( 64, 26 )

[node name="identifierLabel" type="Label" parent="idLine2"]
margin_left = 64.0
margin_right = 320.0
margin_bottom = 26.0
rect_min_size = Vector2( 256, 26 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = "amount:"
valign = 1

[node name="amount" type="LineEdit" parent="idLine2"]
margin_left = 320.0
margin_right = 1024.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 5 )
caret_blink = true
script = ExtResource( 9 )
warnPopUp = ExtResource( 5 )

[node name="Node" type="Control" parent="."]
margin_top = 81.0
margin_right = 1024.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 1 )

[node name="separator" type="TextureRect" parent="."]
margin_top = 83.0
margin_right = 1024.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 1 )
size_flags_horizontal = 5
texture = SubResource( 23 )
expand = true

[connection signal="toggled" from="tagModeChanger/modeSwithcer" to="." method="change_tag_mode"]
[connection signal="text_changed" from="idLine/identifierKey" to="idLine/identifierKey" method="textChanged"]
[connection signal="text_changed" from="idLine/identifierValue" to="idLine/identifierValue" method="textChanged"]
[connection signal="text_changed" from="idLine2/amount" to="idLine2/amount" method="textChanged"]
